[project]
name = "validator-rev"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan K", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "polars>=0.20.30",
    "lancedb>=0.8.1",
    "hypersync>=0.7.1",
    "ipykernel>=6.29.4",
    "hvplot>=0.10.0",
    "ipywidgets>=8.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/validator_rev"]
